Added retailer css and js

--- a/WebContent/NewUser.html
+++ b/WebContent/NewUser.html
@@ -4,11 +4,11 @@
 <title>New Page 1</title>
 </head>
 <body bgcolor="#999966">
-	<form method="POST" action="newuser">
+	<form method="POST" action="core/register">
 		<!--webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
 S-Format="TEXT/CSV" S-Label-Fields="TRUE" -->
 		<p>
-			<input required="required" type="email" name="emailid" size="20" placeholder="Email id">
+			<input required="required" type="email" name="emailId" size="20" placeholder="Email id">
 		</p>
 		<p>
 			<input required="required" type="password" name="pass" size="20" placeholder="Password">
