--- a/WebContent/AllGroceries.html
+++ b/WebContent/AllGroceries.html
@@ -1,46 +1,12 @@
 <html>
 <head>
 <title>File Uploading Form</title>
-<style>
-.grocery {
-	width: 120px;
-	height: 120px;
-	float: left;
-}
-
-.grocery .image {
-	width: 80px;
-	height: 80px;
-}
-</style>
-</head>
-<body>
-<button onclick="getAllGroceries()">Get Groceries</button>
-<div id="preview">
-</div>
-<script id="groceryTemplate" type="template">
-<div id="{{name}}" class="grocery">
-<a href="{{imageurl}}">
-<img id="{{name}}image" src="{{imageurl}}" class="image" data-zoom-image="{{imageurl}}"/>
-</a>
-<div>
-{{name}}
-</div>
-<div>
-{{price}}
-</div>
-<div>
-Qty: <input type="text" size='2'></input>
-<button onclick="alert('soon will add to cart')">Add To Cart</button>
-</div>
-</div>
-</script>
-
+<link href="retailer.css" type="text/css" rel="stylesheet" ></link>
 <script src="lib/jquery-1.10.2.js" type="text/javascript" ></script>
 <script src="lib/jquery.elevatezoom.js" type="text/javascript" ></script>
-
+<script src="retailer.js" type="text/javascript" ></script>
 <script type="text/javascript">
-    function applyTemplate(template, data) {    	
+  /*   function applyTemplate(template, data) {    	
     	for (var d in data) {
     		var re = new RegExp("{{" + d + "}}", "g");
     		template = template.replace(re, data[d]); 		
@@ -61,9 +27,49 @@ Qty: <input type="text" size='2'></input>
 				}				
 				});
 		
-	}
+	} */
+</script>
+</head>
+<body>
+<button onclick="chan.retailer.grocery.getAllGroceries()">Get Groceries</button>
+<button onclick="chan.retailer.basket.getAllGroceries()">Get Basket</button>
+<div id="preview">
+</div>
+<script id="groceryTemplate" type="template">
+<div id="{{$oid}}" class="grocery">
+<a href="{{imageurl}}">
+<img id="{{name}}image" src="{{imageurl}}" class="image" data-zoom-image="{{imageurl}}"/>
+</a>
+<div>
+{{name}}
+</div>
+<div>
+{{price}}
+</div>
+<div>
+Qty: <input type="text" size='2'></input>
+<button onclick="chan.retailer.basket.addToBasket({groceryId: '{{$oid}}'})">Add To Cart</button>
+</div>
+</div>
 </script>
 
+<script id="basketTemplate" type="template">
+<div id="{{$oid}}" class="grocery">
+<a href="{{imageurl}}">
+<img id="{{name}}image" src="{{imageurl}}" class="image" data-zoom-image="{{imageurl}}"/>
+</a>
+<div>
+{{name}}
+</div>
+<div>
+{{price}}
+</div>
+<div>
+Qty: <input type="text" size='2'></input>
+<button onclick="chan.retailer.basket.removeFromBasket({groceryId: '{{$oid}}'})">Remove</button>
+</div>
+</div>
+</script>
 
 </body>
 </html>
