--- a/WebContent/index.htm
+++ b/WebContent/index.htm
@@ -4,12 +4,11 @@
 <title>New Page 1</title>
 
 <body bgcolor="#999966">
-	<form method="POST" action="basicauth">
+	<form method="POST" action="core/login">
 		<!--webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
 S-Format="TEXT/CSV" S-Label-Fields="TRUE" -->
 		<p>
-			Enter Name: <input type="text"
-				name="user" size="20">
+			Enter Name: <input type="text" name="emailId" size="20">
 		</p>
 		<p>
 			Enter Password: <input type="password" name="pass" size="20">
@@ -25,26 +24,6 @@ S-Format="TEXT/CSV" S-Label-Fields="TRUE" -->
 	<div>
 		<button id="testajax" onclick='testAjax()'>Test Ajax</button>
 	</div>
-	
-<script type="text/javascript">
-function testAjax() {
-	
-	
-	var xmlhttp = new XMLHttpRequest();
-	xmlhttp.onreadystatechange = function() {
-		if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-			debugger;
-			//xmlhttp.responseText;
-		}
-	}
-
-	xmlhttp.open("POST", "TestInsertData");
-	xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-	xmlhttp.send("fname=Henry&lname=Ford");
-
-	}
-</script>
-
 </body>
 
 </html>
