--- a/WebContent/index.htm
+++ b/WebContent/index.htm
@@ -1,12 +1,42 @@
 <! doctype html >
-<html>
-<head>
-<title>New Page 1</title>
+<html><head>
+<title>Makssa</title>
+<link href="retailer.css" type="text/css" rel="stylesheet">
+</head>
 
-<body bgcolor="#999966">
-	<form method="POST" action="core/login">
-		<!--webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
-S-Format="TEXT/CSV" S-Label-Fields="TRUE" -->
+<body style="background: #f7f5ee;">
+	<div style="margin: auto; background: rgb(252, 201, 126);width: 1024px">
+		<div id="container" style="width: 1024px;box-shadow: 0px 5px 5px #AF7319;">
+
+			<div id="header" class="header" style="
+    padding: 8px;
+">
+				<div class="logo" style="foalt: left;">Logo</div>
+
+				<div id="headerbar" class="headerbar" style="float: right; width: 85%;">
+					<ul style="float: right; list-style: none; margin-top: -20; margin-right: 49;">
+						<li style="display: table-cell;">New User</li>
+						<li style="display: table-cell;">Login</li>
+					</ul>
+					<span id="searchbar" class="searchbar">Search bar goes here</span>
+					<span id="basket" class="basket">Basket goes here...</span>
+				</div>
+
+				
+			</div>
+<div id="menu" class="menu" style="
+    padding-top: 18px;
+    background: rgb(247, 184, 70);
+">Menugoes here</div>
+			<div id="content" class="maincontent" style="
+    box-shadow: -1px 2px 2px 2px rgb(216, 216, 216);
+">Content goes here</div>
+
+		</div>
+	</div>
+	<!-- <form method="POST" action="core/login">
+		webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
+S-Format="TEXT/CSV" S-Label-Fields="TRUE"
 		<p>
 			Enter Name: <input type="text" name="emailId" size="20">
 		</p>
@@ -23,7 +53,77 @@ S-Format="TEXT/CSV" S-Label-Fields="TRUE" -->
 	
 	<div>
 		<button id="testajax" onclick='testAjax()'>Test Ajax</button>
-	</div>
+	</div> -->
+
+
+
+	<!-- <form method="POST" action="core/login">
+		webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
+S-Format="TEXT/CSV" S-Label-Fields="TRUE"
+		<p>
+			Enter Name: <input type="text" name="emailId" size="20">
+		</p>
+		<p>
+			Enter Password: <input type="password" name="pass" size="20">
+		</p>
+		<p>
+		<input type="submit" value="Submit"
+				name="B1">
+		</p>
+	</form>
+	
+	<a id="newuser" href="NewUser.html">New User</a>	
+	
+	<div>
+		<button id="testajax" onclick='testAjax()'>Test Ajax</button>
+	</div> -->
+
+
+
+
+	<!-- <form method="POST" action="core/login">
+		webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
+S-Format="TEXT/CSV" S-Label-Fields="TRUE"
+		<p>
+			Enter Name: <input type="text" name="emailId" size="20">
+		</p>
+		<p>
+			Enter Password: <input type="password" name="pass" size="20">
+		</p>
+		<p>
+		<input type="submit" value="Submit"
+				name="B1">
+		</p>
+	</form>
+	
+	<a id="newuser" href="NewUser.html">New User</a>	
+	
+	<div>
+		<button id="testajax" onclick='testAjax()'>Test Ajax</button>
+	</div> -->
+
+
+
+	<!-- <form method="POST" action="core/login">
+		webbot bot="SaveResults" U-File="fpweb:///_private/form_results.txt"
+S-Format="TEXT/CSV" S-Label-Fields="TRUE"
+		<p>
+			Enter Name: <input type="text" name="emailId" size="20">
+		</p>
+		<p>
+			Enter Password: <input type="password" name="pass" size="20">
+		</p>
+		<p>
+		<input type="submit" value="Submit"
+				name="B1">
+		</p>
+	</form>
+	
+	<a id="newuser" href="NewUser.html">New User</a>	
+	
+	<div>
+		<button id="testajax" onclick='testAjax()'>Test Ajax</button>
+	</div> -->
 </body>
 
 </html>
